fixed Mozilla layout issue in popup forms

--- a/modules/org.opencms.frontend.templateone/resources/system/modules/org.opencms.frontend.templateone/resources/style.css
+++ b/modules/org.opencms.frontend.templateone/resources/system/modules/org.opencms.frontend.templateone/resources/style.css
@@ -388,11 +388,12 @@ div.popup { <%
 	} 
 	
 	%>
+	-moz-box-sizing: border-box;
 	margin-top: 10px;
-	width: 99.8%;  
+	width: 100%;  
 }
 
-h1.popup { font-size: 10pt; padding: 2px; width: 99.8%; background-color: <%= headNavBg %>; color: <%= headNavFont %>; }
+h1.popup { font-size: 10pt; padding: 2px; width: 100%; background-color: <%= headNavBg %>; color: <%= headNavFont %>; }
 .popupform { border: 1px solid <%= contentFont %>; width: 450px; }
 span.formerror { color: <%= headNavBg %>; font-weight: bold;}
 
