--- a/modules/org.opencms.frontend.templateone/resources/system/modules/org.opencms.frontend.templateone/resources/style_accessible.css
+++ b/modules/org.opencms.frontend.templateone/resources/system/modules/org.opencms.frontend.templateone/resources/style_accessible.css
@@ -397,10 +397,11 @@ div.popup { <%
 	
 	%>
 	margin-top: 10px;
-	width: 99.9%;
+	-moz-box-sizing: border-box;
+	width: 100%;
 }
 
-h1.popup { font-size: 1.0em; padding: 2px; width: 99.9%; background-color: <%= headNavBg %>; color: <%= headNavFont %>; }
+h1.popup { font-size: 1.0em; padding: 2px; width: 100%; background-color: <%= headNavBg %>; color: <%= headNavFont %>; }
 .popupform { border: 1px solid <%= contentFont %>; width: 450px; }
 span.formerror { color: <%= headNavBg %>; font-weight: bold;}
 
